# multiRecordGdiDemo

./: .gitignore  CMakeLists.txt  README.md
qml/: WebPage.qml
resources/: resources.qrc
src/: CompositeRecorder.cpp  CompositeRecorder.h  GdiCompositeCapturer.cpp  GdiCompositeCapturer.h  LayoutSolver.cpp  LayoutSolver.h  MainWindow.cpp  MainWindow.h  WebViewWindow.cpp  WebViewWindow.h  WindowLayout.cpp  WindowLayout.h  main.cpp
